--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header></header>
-
-    <main></main>
-
-    <footer></footer>
+    <div class="grid"></div>
+    <template>
+        <article class="svamp">
+            <h2>Godcille</h2>
+            <p>Is evil? <span class="isEvil"></span></p>
+            <p class="powers">Design</p>
+            <p class="weaknesses">Happy</p>
+            <img src="https://images.pexels.com/photos/6499009/pexels-photo-6499009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        </article>
+    </template>
 
     <script src="js/main.js"></script>
 </body>
