--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vild Mad Ungdom</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
     <div class="grid"></div>
     <template>
-        <article class="svamp">
-            <h2>Godcille</h2>
-            <p>Is evil? <span class="isEvil"></span></p>
-            <p class="powers">Design</p>
-            <p class="weaknesses">Happy</p>
-            <img src="https://images.pexels.com/photos/6499009/pexels-photo-6499009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-        </article>
+      <article class="svamp">
+        <h2>Godcille</h2>
+        <h2 class="title_">Titel</h2>
+        <h2 class="kategori_">Titel</h2>
+        <!-- <h3 class="season_0">Season</h2> -->
+        <p class="powers">Design</p>
+        <p class="weaknesses">Happy</p>
+        <img
+          src="https://images.pexels.com/photos/6499009/pexels-photo-6499009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt=""
+        />
+      </article>
     </template>
 
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
