--- a/quiz.html
+++ b/quiz.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vild Mad Quiz</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>Quiz Vildmad</title>
+    <link rel="stylesheet" href="css/quiz.css">
 </head>
 <body>
-    <header></header>
+    <div class="quiz-container">
+        <h1>Svampe Quizzen</h1>
+        <div class="question" id="question">
+            Question goes here.
+        </div>
+        <div class="choices">
+            <button class="choice" onclick="checkAnswer(0)">Choice 1</button>
+            <button class="choice" onclick="checkAnswer(1)">Choice 2</button>
+            <button class="choice" onclick="checkAnswer(2)">Choice 3</button>
+            <button class="choice" onclick="checkAnswer(3)">Choice 4</button>
+        </div>
+        <div id="result"></div>
+    </div>
 
-    <main></main>
-
-    <footer></footer>
-
-    <script src="js/main.js"></script>
+    <script src="js/quiz.js"></script>
 </body>
 </html>
