--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <h2 class="title_">Titel</h2>
         <h2 class="kategori_">Titel</h2>
         <!-- <h3 class="season_0">Season</h2> -->
-        <p class="description">Kan findes i `${description}`</p>
+        <p class="description"></p>
+        <p class="opskrift"></p>
         <p class="spiselig">Spiselig</p>
         <img
           src="https://images.pexels.com/photos/6499009/pexels-photo-6499009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -40,6 +41,5 @@
     </template>
 
     <script src="js/main.js"></script>
-    <script src="js/filter.js"></script>
   </body>
 </html>
