--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+     <header>
+      <img src="imgs/vild-mad-logo.png" alt="logo">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="quiz2.html">Svampe Quiz</a></li>
+        </ul>
+      </nav>
+    </header>
     <!-- Filtrering  -->
     <h1>Mushroom Filter</h1>
     <form id="filterForm">
