--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   </head>
   <body>
      <header>
-      <img src="imgs/vild-mad-logo.png" alt="logo">
+      <a href="index.html">
+      <img src="imgs/vild-mad-logo.png" alt="logo"></a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="quiz2.html">Svampe Quiz</a></li>
+          <li><a href="quiz2.html">Svampe Quizzen</a></li>
         </ul>
       </nav>
     </header>
+
+    <main>
     <!-- Filtrering  -->
     <h1>Mushroom Filter</h1>
     <form id="filterForm">
@@ -35,20 +37,23 @@
     <div class="grid"></div>
     <template>
       <article class="svamp">
-        <h2>Godcille</h2>
+        
         <h2 class="title_">Titel</h2>
         <h2 class="kategori_">Titel</h2>
         <!-- <h3 class="season_0">Season</h2> -->
         <p class="description"></p>
         <p class="opskrift"></p>
-        <p class="spiselig">Spiselig</p>
+        
         <img
           src="https://images.pexels.com/photos/6499009/pexels-photo-6499009.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
           alt=""
         />
+        <p class="spiselig">Spiselig</p>
       </article>
     </template>
 
     <script src="js/main.js"></script>
+  </main>
+  <footer></footer>
   </body>
 </html>
