--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
     <main>
     <!-- Filtrering  -->
-    <h1>Mushroom Filter</h1>
+    <h1>Svampe Filter</h1>
     <form id="filterForm">
-      <label for="mushroomType">Select Mushroom Type:</label>
+      <label for="mushroomType">Vælg Svampe Type:</label>
       <select id="mushroomType" name="mushroomType">
-        <option value="all">All Mushrooms</option>
-        <option value="eatable">Eatable</option>
-        <option value="noneatable">Non-Eatable</option>
+        <option value="all">Alle Svampe</option>
+        <option value="eatable">Spiselig</option>
+        <option value="noneatable">Ikke Spiselig</option>
       </select>
-      <button type="submit">Filter</button>
+      <button type="submit">Filtrer</button>
     </form>
     <div id="filteredResults">
       <!-- Filtered mushroom data will be displayed here -->
