--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           alt=""
         />
         <p class="spiselig">Spiselig</p>
+        <button class="opskriftbtn">CLICK</button>
       </article>
+      
     </template>
 
     <script src="js/main.js"></script>
