--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           alt=""
         />
         <p class="spiselig">Spiselig</p>
-        <button class="opskriftbtn">CLICK</button>
+        <button class="opskriftbtn">Se Opskrift</button>
       </article>
       
     </template>
